welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:7: error: not found: value Mathabs
return Mathabs(sum/n);
       ^